{
  "version": 4,
  "terraform_version": "0.12.15",
  "serial": 19,
  "lineage": "afd68bc9-1ed3-ec43-cae7-150484146022",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "myeip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0ea3d84d3539d6404",
            "public_dns": "ec2-52-71-39-218.compute-1.amazonaws.com",
            "public_ip": "52.71.39.218",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "MyEip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0d34c9085b2ab348b",
            "owner_id": "521773187541",
            "tags": {
              "Name": "myigw"
            },
            "vpc_id": "vpc-038fc86d3c38a705f"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mynatgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ea3d84d3539d6404",
            "id": "nat-074a9b41fe71ba6dd",
            "network_interface_id": "eni-0024ac3066afd300d",
            "private_ip": "10.0.0.4",
            "public_ip": "52.71.39.218",
            "subnet_id": "subnet-0a0c7782eff71e8a6",
            "tags": {
              "Name": "MyNatgw"
            }
          },
          "dependencies": [
            "aws_eip.myeip",
            "aws_subnet.publicsubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myprivatert",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d2a42eeb7c341da8",
            "owner_id": "521773187541",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-074a9b41fe71ba6dd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyPrivateRt"
            },
            "vpc_id": "vpc-038fc86d3c38a705f"
          },
          "dependencies": [
            "aws_eip.myeip",
            "aws_internet_gateway.myigw",
            "aws_nat_gateway.mynatgw",
            "aws_subnet.publicsubnet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mypublicrt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ab23be24c1a718f4",
            "owner_id": "521773187541",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d34c9085b2ab348b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyPublicRt"
            },
            "vpc_id": "vpc-038fc86d3c38a705f"
          },
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myprivate_subnet_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a81862346c880d88",
            "route_table_id": "rtb-0d2a42eeb7c341da8",
            "subnet_id": "subnet-0412120d030ad45d6"
          },
          "dependencies": [
            "aws_eip.myeip",
            "aws_internet_gateway.myigw",
            "aws_nat_gateway.mynatgw",
            "aws_route_table.myprivatert",
            "aws_subnet.private_subnet",
            "aws_subnet.publicsubnet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mysubnet_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e7a78a199843b20",
            "route_table_id": "rtb-0ab23be24c1a718f4",
            "subnet_id": "subnet-0a0c7782eff71e8a6"
          },
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_route_table.mypublicrt",
            "aws_subnet.publicsubnet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521773187541:subnet/subnet-0412120d030ad45d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.0.16/28",
            "id": "subnet-0412120d030ad45d6",
            "map_public_ip_on_launch": false,
            "owner_id": "521773187541",
            "tags": {
              "Name": "MyPrivateSubnet"
            },
            "vpc_id": "vpc-038fc86d3c38a705f"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521773187541:subnet/subnet-0a0c7782eff71e8a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.0.0/28",
            "id": "subnet-0a0c7782eff71e8a6",
            "map_public_ip_on_launch": true,
            "owner_id": "521773187541",
            "tags": {
              "Name": "MyPublicSubnet"
            },
            "vpc_id": "vpc-038fc86d3c38a705f"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521773187541:vpc/vpc-038fc86d3c38a705f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/27",
            "default_network_acl_id": "acl-0098b4bc7a698d88c",
            "default_route_table_id": "rtb-09eed043b3a16081c",
            "default_security_group_id": "sg-0f681a36216818f3a",
            "dhcp_options_id": "dopt-cc5faab6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-038fc86d3c38a705f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09eed043b3a16081c",
            "owner_id": "521773187541",
            "tags": {
              "Name": "MyVpc"
            }
          }
        }
      ]
    }
  ]
}